# ai_text_editor

./: .gitattributes  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
assets/: .gitignore  config.json  config.json.bak
assets/prompts/: formular-prompt.txt  mind-graph-prompt.txt  spell-check-prompt.txt  test.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  editor.dart  editor_home.dart  editor_notifier.dart  editor_state.dart  file_structure_view.dart  home.dart  init.dart  main.dart  markdown_util.dart  notifier.dart  objectbox-model.json  objectbox.g.dart  quill_toolbar_config.dart  routers.dart
lib/components/: add_model_dialog.dart  ai_chat_widget.dart  ai_widget.dart  app_body.dart  app_right_body.dart  app_title.dart  editor.dart  file_structure_view.dart  history_list.dart  message_box.dart  model_chip.dart  position_widget.dart  select_or_input_file_url_dialog.dart  select_recent_file_dialog.dart
linux/: CMakeLists.txt
macos/: Podfile
readme/: readme.json  readme_v_1.0.0_dev2.json
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  test.rs
rust/src/api/: charts_api.rs  converter_api.rs  message_api.rs  mod.rs
rust/src/charts/: mod.rs
rust/src/messages/: mod.rs
rust_builder/: pubspec.yaml
test/: animate_test.dart  draggable_test.dart  editable_table_test.dart  form_test.dart  image_selector_test.dart  list_test.dart  markdown_test.dart  roll_test.dart  test_makdown_to_delta.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+98 files in other folders)
