[package]
name = "rust_lib_ai_text_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
anyhow = "1"
flutter_rust_bridge = "=2.8.0"
converter = { version = "0.1.0", path = "../plugins/converter" }
