[package]
name = "rust_lib_ai_text_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
anyhow = "1"
flutter_rust_bridge = "=2.8.0"
converter = { version = "0.1.0", path = "../plugins/converter" }
miniz_oxide = "=0.7.2"
chart_core = { git = "https://github.com/guchengxi1994/frb_charming.git", package = "chart_core", rev = "1452c3639f58e3989200605ee9e04c8575c62535" }
